# Agentic-Rag

./: .env.example  .gitignore  Executive_Summary_v2.md  README.md  RELEASE_NOTES.md  agenticrag_evaluation_report.md  agenticrag_technical_architecture.md  bulk_convert.py  pdf_to_markdown.py  pyproject.toml  requirements.txt  run_pageindex.py  scratch_test.py  server.py  test_forest.py  test_scanned_ocr.py  testpdf.py
agenticrag/: __init__.py  __main__.py  config.py  forest.py  groq_client.py  pageindex.py  pdf_parser.py  pdf_to_markdown.py  prompts.py  server.py  tree_builder.py  tree_search.py  tree_splitter.py
agenticrag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
agenticrag/agents/: __init__.py  critic.py  evaluator.py  hunter.py  keyword_agent.py  orchestrator.py  planner.py  synthesizer.py
agenticrag/graph/: __init__.py  base.py  neo4j_graph.py  sqlite_graph.py
agenticrag/ingestion/: __init__.py  batch.py  metadata.py  pipeline.py
agenticrag/storage/: __init__.py  base.py  gcs.py  local.py
agenticrag/utils/: logging.py
benchmarks/: dataset_cache.json  requirements.txt  run_custom_single_test.py
benchmarks/_agenticrag_data_single/: graph.db
benchmarks/_agenticrag_data_single/trees/: 3M_2018_10K_faf10c53fc6f__part03.json  3M_2018_10K_faf10c53fc6f__part06.json  3M_2018_10K_faf10c53fc6f__part08.json
benchmarks/results/: single_test_20260519_230251.md
examples/: example_load_tree.py  example_rag.py
notebooks_data/: notebooks.json  settings.json
notebooks_data/6d87da49-f46/forest_data/: graph.db
notebooks_data/6d87da49-f46/forest_data/trees/: 3M_2018_10K_faf10c53fc6f__part01.json  3M_2018_10K_faf10c53fc6f__part07.json
notebooks_data/8632b7d3-e1b/forest_data/: graph.db
notebooks_data/8632b7d3-e1b/forest_data/trees/: transformer_architecture_deep_dive_cc1321fb80f7.json
notebooks_data/b945390e-b4e/forest_data/: graph.db
notebooks_data/b945390e-b4e/forest_data/trees/: Executive_Summary_(2)_60b8efe3682e.json  doc1_ai_agent_foundations_80a2798dbb8c.json  (+3 more)
notebooks_data/fcfb8719-ec1/forest_data/: graph.db
test_benched_tree/: 3M_2018_10K_faf10c53fc6f__part02.json  3M_2018_10K_faf10c53fc6f__part04.json  3M_2018_10K_faf10c53fc6f__part05.json
web/: index.html
(+4 files in other folders)
