[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag-core"
version = "2.0.1"
description = "Vectorless, Reasoning-based RAG — multi-document agentic retrieval with zero hallucination"
authors = [
    { name = "Arham Mirkar", email = "arhammirker1@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["rag", "llm", "retrieval", "agenticrag", "groq", "vectorless", "agentic", "pageindex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "groq>=0.9.0",
    "pdfplumber>=0.10.0",
    "python-dotenv>=1.0.0",
    "google-genai>=0.2.0",
]

[project.optional-dependencies]
# Web UI (server.py)
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
]
# Google Cloud Storage backend
gcs = ["google-cloud-storage>=2.0.0"]
# AWS S3 backend (future)
aws = ["boto3>=1.28.0"]
# Neo4j graph backend
neo4j = ["neo4j>=5.0.0"]
# Background task processing
workers = ["celery>=5.3.0", "redis>=5.0.0"]
# All optional dependencies
all = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "google-cloud-storage>=2.0.0",
    "boto3>=1.28.0",
    "neo4j>=5.0.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "tiktoken>=0.7.0",
]
# Development tools
dev = [
    "pytest>=7.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
agenticrag = "agenticrag.__main__:main"

[project.urls]
Homepage = "https://github.com/AjayVirkar/agenticrag"
Documentation = "https://github.com/AjayVirkar/agenticrag#readme"
Repository = "https://github.com/AjayVirkar/agenticrag"
Issues = "https://github.com/AjayVirkar/agenticrag/issues"

[tool.setuptools.packages.find]
include = ["agenticrag*"]
